# esp-nmea-bridge-zephyr

./: .gitignore  CMakeLists.txt  CONTEXT.md  Kconfig  README.md  prj.conf  west.yml
boards/waveshare/esp32c6_dev_kit_n8/: esp32c6_dev_kit_n8_hpcore-pinctrl.dtsi  esp32c6_dev_kit_n8_hpcore.dts  esp32c6_dev_kit_n8_lpcore.dts  esp32c6_lpcore_wroom_n8.dtsi
src/: bridge_telemetry.c  bridge_telemetry.h  esp_wpa3_zephyr_compat.h  main.c  nmea_bridge.c  nmea_bridge.h  nmea_dns_sd.c  status_led.c  status_led.h  status_led_policy.c  status_led_policy.h  tcp_nmea_client.c  tcp_nmea_client.h  tcp_nmea_server.c  tcp_nmea_server.h  tcp_nmea_session.c  tcp_nmea_session.h  tcp_signalk_client.c  tcp_signalk_client.h  uart_nmea.c  uart_nmea.h  web_app.c  wifi_manager.c  wifi_manager.h
src/web_assets/: app.js  index.html  style.css
tests/bridge_telemetry/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bridge_telemetry/src/: main.c
tests/status_led_policy/: CMakeLists.txt  testcase.yaml
tests/status_led_policy/src/: main.c
